tests/snapshots/examples_fixtures/type_system__infer_base_types.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/infer_base_types.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:8:5
  |
8 |     assert_eq(len(parts), 3)
  |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:9:5
  |
9 |     assert_eq(first(parts), Some("hello"))
  |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:12:5
   |
12 |     assert_eq(trimmed, "hi")
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/type_system/infer_base_types.flx:14:13
   |
14 |     let r = range(1, 6)
   |             ^^^^^

Hint:
  Define it first: let range = ...;

Help:
  Did you mean `r`?


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:15:5
   |
15 |     assert_eq(len(r), 5)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:16:5
   |
16 |     assert_eq(sum(r), 15)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/type_system/infer_base_types.flx:19:19
   |
19 |     let doubled = map(r, /x -> x * 2)
   |                   ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:20:5
   |
20 |     assert_eq(sum(doubled), 30)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/type_system/infer_base_types.flx:22:17
   |
22 |     let evens = filter(r, /x -> x % 2 == 0)
   |                 ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:23:5
   |
23 |     assert_eq(len(evens), 2)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/type_system/infer_base_types.flx:25:17
   |
25 |     let total = fold(r, 0, /(acc, x) -> acc + x)
   |                 ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:26:5
   |
26 |     assert_eq(total, 15)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/type_system/infer_base_types.flx:30:19
   |
30 |     let lengths = map(words, /w -> len(w))
   |                   ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/type_system/infer_base_types.flx:31:16
   |
31 |     let long = filter(lengths, /l -> l > 3)
   |                ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:32:5
   |
32 |     assert_eq(len(long), 3)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `unwrap_or`.

  examples/type_system/infer_base_types.flx:35:15
   |
35 |     let val = unwrap_or(Some(42), 0)
   |               ^^^^^^^^^

Hint:
  Define it first: let unwrap_or = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:36:5
   |
36 |     assert_eq(val, 42)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `map_option`.

  examples/type_system/infer_base_types.flx:38:18
   |
38 |     let mapped = map_option(Some(10), /x -> x * 2)
   |                  ^^^^^^^^^^

Hint:
  Define it first: let map_option = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:39:5
   |
39 |     assert_eq(unwrap_or(mapped, 0), 20)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:43:5
   |
43 |     assert_eq(sum(ints), 60)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/type_system/infer_base_types.flx:46:18
   |
46 |     let result = fold(
   |                  ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/infer_base_types.flx:55:5
   |
55 |     assert_eq(result, 355)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;

Found 22 errors.
== stdout ==
<not executed>
